--- a/index.html
+++ b/index.html
@@ -6,29 +6,35 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Social links profile</title>
+  <title>Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <div id="main">
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div id="img">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="profile">
+    </div>
+
+    <div id="info">
+      <p id="name">Jessica Randall</p>
+      <p id="location">London, United Kingdom</p>
+      <p id="career">"Front-end developer and avid reader</p>
+    </div>
+
+    <div id="links">
+      <a href="#">Github</a>
+      <a href="#">Frontend Mentor</a>
+      <a href="#">LinkedIn</a>
+      <a href="#">X</a>
+      <a href="#">Instagram</a>
+      
+    </div>
+
   </div>
+
+
 </body>
 </html>
