--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="info">
       <p id="name">Jessica Randall</p>
       <p id="location">London, United Kingdom</p>
-      <p id="career">"Front-end developer and avid reader</p>
+      <p id="career">"Front-end developer and avid reader"</p>
     </div>
 
     <div id="links">
